@@ -1,3 +1,7 @@
+2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* No request allocation needed on inode and file release
+	
 2004-06-21  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* Fix possible inode leak in userspace in case of unfinished
